Fixed bug in how types being set Added tests for type Added check for solver return status and set values to NA if solver fails

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(lpSolveSolve)
 export(lpSolveSummary)
 export(solve)
 export(summary)
+export(validlpSolveObject)
 exportClasses(lpSolve)
 import(lpSolveAPI)
 import(methods)
